--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^2.6.12",
     "vue-cookies": "^1.7.4",
     "vue-doc-preview": "^0.3.2",
+    "vue-fragment": "^1.6.0",
     "vue-functional-calendar": "^2.9.98",
     "vue-pdf-app": "^2.1.0",
     "vue-router": "^3.5.1",
