--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "docx-to-html": "^1.0.1",
     "file-saver": "^2.0.5",
     "filestack-js": "^3.24.1",
-    "mammoth": "^1.5.1",
+    "js-xlsx": "^0.8.22",
+    "mammoth": "^1.8.0",
     "v-viewer": "^1.5.1",
     "vue": "^2.6.12",
     "vue-cookies": "^1.7.4",
@@ -58,7 +59,7 @@
     "babel-eslint": "^10.1.0",
     "ckeditor5-custom-build": "^0.0.6",
     "crypto-js": "^3.3.0",
-    "docxtemplater": "^3.36.0",
+    "docxtemplater": "^3.49.1",
     "element-ui": "^2.15.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
