--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-pdf-app": "^2.1.0",
     "vue-router": "^3.5.1",
     "vue-vnc": "^0.0.4",
+    "vue2-datepicker": "^3.11.1",
     "vue2-editor": "^2.10.3",
     "vuetify": "^2.6.12",
     "vuex": "^3.6.2",
