--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-saver": "^2.0.5",
     "filestack-js": "^3.24.1",
     "js-xlsx": "^0.8.22",
+    "js-yaml": "^4.1.0",
     "mammoth": "^1.8.0",
     "v-viewer": "^1.5.1",
     "vue": "^2.6.12",
@@ -50,6 +51,7 @@
     "@editorjs/marker": "^1.2.2",
     "@mdi/font": "^4.9.95",
     "@mdi/js": "^4.9.95",
+    "@types/node": "^22.13.5",
     "@vue/cli-plugin-babel": "^4.4.6",
     "@vue/cli-plugin-eslint": "^4.4.6",
     "@vue/cli-plugin-router": "^4.4.6",
